--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -804,6 +804,7 @@ p.body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding-bottom: 65.1px;
 }
 .cartPageDivRight{
   display: flex;
