--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -695,11 +695,15 @@ p.body {
 }
 
 .aDWishlistDiv {
-  background-color: white;
   grid-row: 1 / span 2;
   grid-column: 4 / span 1;
   overflow: auto;
   border-radius: 25px;
+  color: white;
+  border: white;
+  border-style: solid;
+  border-radius: 25px;
+  border-width: 1px;
 }
 .aDWishlistDiv::-webkit-scrollbar {
   display:none;
@@ -715,10 +719,16 @@ p.body {
 .aDCartDiv::-webkit-scrollbar{
   display: none;
 }
-h3.CurrentCart{
-  position: fixed;
+.wishlistHeader{
+  justify-content: center;
   text-align: center;
   margin-bottom:15px;
+}
+.CurrentCart{
+  justify-content: center;
+  text-align: center;
+  margin-bottom:15px;
+  background-color: blue;
 }
 .pppContainer {
   background-color: green;
@@ -852,12 +862,21 @@ h3.CurrentCart{
 }
 .cartSubTotalText{
   color: white;
+  background-color: #2f3438;
+  border-radius: 25px;
+  justify-content: center;
 }
 /*! ------ ACCOUNT DETAILS STYLING START ------ */
 /**----------------CURRENT CART ----------------*/
 .miniTileDiv{
 display: flex;
 flex-direction: column;
+background-color: #2f3438;
+border-radius: 25px;
+}
+.miniTitle{
+  margin-top: 10px;
+  margin-bottom: 2px;
 }
 .miniBottom{
   display: flex;
@@ -870,6 +889,11 @@ flex-direction: column;
 .miniBottomRight{
   display: flex;
   flex-direction: column;
+  height: 75px;
+}
+.wishlistQuantity,
+.miniPrice{
+  margin: 2px;
 }
 .miniPriceDiv,
 .miniQuantityupdate{
@@ -877,7 +901,12 @@ flex-direction: column;
   flex-direction: row;
   justify-content: space-around;
 }
-
+button.removeFromWishlistButton,
+button.updateWishlistQuantity {
+  margin-left: 7px;
+  height: 25px;
+  align-self: center;
+}
 /*! -------- FOOTER DOCS STYLING START ------- */
 /* .sectionHeaders{
 
