--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -888,7 +888,7 @@ p.body {
 }
 .miniBottomRight {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 75px;
 }
 .wishlistQuantity,
