update Cart Component

--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -62,7 +62,7 @@ html::-webkit-scrollbar{
   }
 .header {
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -83,6 +83,68 @@ p.siteNameText {
   margin: 10px;
   font-size: 25px;
   font-weight: 700;
+}
+.searchBarParent{
+  display: flex;
+  flex-direction: column;
+}
+.searchBarParentLoggedIn{
+  margin-left: 35px;
+  display: flex;
+  flex-direction: column;
+}
+.textSearchLabel{
+  color: #fcee09;
+  font-weight: bold;
+}
+.textSearch{
+  width: 420px;
+  margin-left: 5px;
+  color: #fcee09;
+  background-color: #2f3438;
+}
+.filterPresetButtons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.filterButtons{
+  color: #fcee09;
+  border-radius: 15px;
+  margin-top: 5px;
+}
+.AZFiltering:hover{
+  color: #e610c2;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 1em #e610c2);
+}
+.ZAFiltering:hover{
+  color: #0ec0c0;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 1em #0ec0c0);
+}
+.LHFiltering:hover{
+  color: #5dbd26;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 1em #5dbd26);
+}
+.HLFiltering:hover{
+  color: #b216f0;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 1em #b216f0);
+}
+.categoryFiltering:hover{
+  color: #c57907;
+  border-radius: 15px;
+  filter: drop-shadow(0 0 1em #c57907);
+}
+.ZAFiltering,
+.HLFiltering{
+margin-left: 15px;
+}
+.alphabeticalButtons,
+.pricingButtons{
+display: flex;
 }
 .navBarMaster {
   display: flex;
@@ -123,7 +185,7 @@ p.navBarLabels {
   width: 100%;
   margin: 0px;
   position: sticky;
-  top:57px;
+  top:67px;
 }
 .regBannerText {
   color: white;
@@ -579,6 +641,7 @@ input.cartListItemQuantity {
   background-color: #2f3438;
   flex-direction: column;
   color: #a1a1a1;
+  margin-bottom: 0px;
 }
 .collapseFooterButton {
   font-size: 20px;
